# LGSA_extanded

./: .gitignore  Makefile  README.md  pyproject.toml
eval/: costs.py  eval_io.py  handler_X.py  handler_XL.py  handler_XML.py  handler_X_batch.py  handler_random.py  run.py  solver.py
generated_problems/: gen_dim10_load20.pt  gen_dim20_load30.pt
scripts/: check_feasibility.py  generate_problems.py
src/: sweep.py  train.py  utils.py
src/HP/: HP.yaml  HP_sweep.yaml
src/cvrp/: feasibility.py  features.py  geometry.py  heuristics.py  init_heuristics.py  instances.py  state.py
src/data/: loader.py
src/eval/: evaluate.py
src/model/: __init__.py  actor.py  base.py  critic.py
src/ppo/: adaptive.py  update.py
src/sa/: curriculum.py  inference.py  loop.py  reward.py  temperature.py
