[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[classic-control]>=1.2.3",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "tensordict>=0.12.3",
    "torch>=2.11.0",
    "torchrl>=0.12.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
